--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@wayrunner/redux-action-creator",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Combines action creation with reducers",
   "main": "./distribution/index.js",
+  "homepage": "https://github.com/wayrunner/redux-action-creator",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register",
     "build": "babel src --out-dir distribution",
